comments renaming and indetation